--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
+  background-image: url(/public/DALL·E\ 2023-02-27\ 07.35.34\ -\ gato\ abriendo\ galleta\ de\ la\ fortuna.png);
+  
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
