--- a/src/index.css
+++ b/src/index.css
@@ -36,10 +36,10 @@ body {
 
 h1 {
   border-radius: 50px;
-  background-color: #ffffff1e;
+  background-color: #ffffff7e;
   font-size: 3.2em;
   line-height: 1.1;
-  color: rgb(6, 218, 218);
+  color: #743a04;
 }
 
 button {
