--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,38 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+
 .phrase-cookie{
-  padding: auto;
+  display: flex;
+  margin: auto;
+  width: 1000px;
+  height: auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  align-items: center;
   border: 10px solid white ;
-  background-color: rgba(115, 116, 117, 0.404);
   border-radius: 50px
   
-};
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  
+  
+  
+}
+.cont{
+  justify-content: center;
+  display: inline-flex;
+  align-items: center;
+  
+ 
+}
+@media (max-width:800px){
+  .background-image{ max-width: 100px;
+    
+    
+    ;
+}
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-}
+
 
 
