--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 
-
+.title{
+  display: flex;
+  flex-direction: column;
+}
 .phrase-cookie{
   display: flex;
   margin: auto;
@@ -19,8 +22,9 @@
 }
 .cont{
   justify-content: center;
-  display: inline-flex;
+  display: block;
   align-items: center;
+  text-align: center;
   
  
 }
